2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-scrabble.pk (scrabble): Move variable declaration up to
	avoid allocation overhead in loop.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Simple Configuration): Renamed from Getting
	Started.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Setting up Hyperlinks): New chapter.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke-default.css (.setting-integer): New class.
	(.setting-string): Likewise.
	(.setting-boolean): Likewise.
	* poke/pk-settings.pk (pk_settings_dump): Add styling to the
	setting values.
	Add a table header.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk (pk_settings_dump): Emit a
	Toggling... message in hyperlink actions.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk: Add documentation for the `endian' setting.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/settings-to-texi.pk: New file.
	* doc/Makefile.am (poke_TEXINFOS): Add poke-settings.texi.
	(poke-settings.texi): Rule to enerate poke-settings.texi.
	(MAINTAINERCLEANFILES): Add poke-settings.texi.
	(EXTRA_DIST): Likewise.
	* doc/poke.texi (set command): Include poke-settings.texi.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk (pk_settings_dump): Avoid allocating a
	local.
	Reorder setting entries.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk (pk_settings_dump): Do not quote the values
	of string setting values.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk (pk_settings_dump): Add [toggle] button for
	boolean settings.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (initialize): Initialize the value of pk_hserver_p.
	* poke/poke.pk (pk_hserver_p): Define.

2022-01-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.pk (Pk_Table.print_table): Do not emit fill
	characters for the last columns in the table.
